--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "widgets",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://github.com/yjcyun/react-practice.git",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
@@ -23,9 +22,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -43,7 +40,6 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^3.1.0",
     "redux-devtools-extension": "^2.13.8"
   }
 }
